[package]
edition = "2021"
name = "hyperfuel-client"
version = "0.0.7"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
    "napi9",
    "async",
    "serde-json",
] }
napi-derive = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1.0.83"
env_logger = "0.11"
faster-hex = "0.9.0"

hyperfuel-client = "0.0.7"
hyperfuel-net-types = "0.0.3"
hyperfuel-format = "0.0.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
